<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-3dp">

        <Button
            android:id="@+id/skip"
            android:layout_width="72dp"
            android:layout_height="53dp"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="656dp"
            android:backgroundTint="#B72B63"
            android:text="@string/skip"
            app:cornerRadius="120dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="285dp"
            android:layout_height="295dp"
            android:layout_marginLeft="-350dp"
            android:layout_marginTop="54dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/text_header2"
            android:layout_width="313dp"
            android:layout_height="83dp"
            android:layout_marginLeft="-300dp"
            android:layout_marginTop="360dp"
            android:text="@string/Title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="85px"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_header"
            android:layout_width="230dp"
            android:layout_height="59dp"
            android:layout_marginLeft="-315dp"
            android:layout_marginTop="438dp"
            android:text="@string/Home"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="121dp"
            android:layout_height="55dp"
            android:layout_marginLeft="-210dp"
            android:layout_marginTop="520dp"
            android:backgroundTint="#B72B63"
            android:text="@string/sign_up"
            app:cornerRadius="@android:dimen/thumbnail_width" />

        <Button
            android:id="@+id/signinbtn"
            android:layout_width="121dp"
            android:layout_height="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="520dp"
            android:backgroundTint="#B72B63"
            android:text="@string/Sign_in"
            app:cornerRadius="@android:dimen/thumbnail_width" />
        <Button
            android:id="@+id/bt_notification"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginLeft="-220dp"
            android:layout_marginTop="620dp"
            android:backgroundTint="#B72B63"
            android:text="Notify me"
            app:cornerRadius="@android:dimen/thumbnail_width" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>