<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD9FA"
    tools:context=".product">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1DBD4"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="-55dp"
        tools:layout_editor_absoluteY="-188dp">

        <Button
            android:id="@+id/back"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:text=" &lt; "
            android:textSize="30dp"
            app:backgroundTint="#DD6C92"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="13dp" />

        <TextView
            android:layout_width="216dp"
            android:layout_height="37dp"
            android:layout_marginLeft="110dp"
            android:text="@string/chocolate_cake_with_nuts"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#090909"
            android:textColorHighlight="#A86E6E"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="69dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="411dp"
            android:layout_height="198dp"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/ck"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="119dp" />

        <RadioGroup
            android:id="@+id/radioGrp"
            android:layout_width="117dp"
            android:layout_height="203dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <RadioButton
                android:id="@+id/med"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Medium"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/lar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Large"
                android:textSize="20dp"
            />

        </RadioGroup>

        <Button
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="-190dp"
            android:text="+"
            android:textSize="30dp"
            app:backgroundTint="#CCAD8A" />
        <Button
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="40dp"
            android:text="+"
            android:textSize="30dp"
            app:backgroundTint="#CCAD8A" />
        <Button
            android:layout_width="217dp"
            android:layout_height="66dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="39dp"
            android:text="@string/Add_to_cart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="25dp"
            app:backgroundTint="#885443"
            app:cornerRadius="@android:dimen/thumbnail_width"
            app:iconTint="#716D6D" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="69dp"
            android:layout_height="30dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="-240dp"
            android:orientation="horizontal"
            android:text="130 le"
            android:textSize="22dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="69dp"
            android:layout_height="30dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            android:text="166 le"
            android:textSize="22dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>