<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cakes"
    android:background="#F1DBD4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="-79dp"
        tools:layout_editor_absoluteY="115dp">

        <Button
            android:id="@+id/bk"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:text=" &lt; "
            android:textSize="30dp"
            app:backgroundTint="#DD6C92"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cakes"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#DD6C92"
            android:textSize="40dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="165dp"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView

                        android:id="@+id/Add_card"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">


                            <ImageView
                                android:id="@+id/cake"
                                android:layout_width="234dp"
                                android:layout_height="100dp"
                                app:srcCompat="@drawable/ck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/chocolate_cake"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/Modify_card"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                app:srcCompat="@drawable/mix" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/_8_seasons"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="165dp"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/Sea_card"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">


                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="150dp"
                                android:layout_height="120dp"
                                app:srcCompat="@drawable/r"
                                android:paddingTop="20dp"/>

                            <TextView
                                android:layout_width="59dp"
                                android:layout_height="32dp"
                                android:layout_margin="10dp"
                                android:text="@string/Rainbow"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/Viewall_card"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="150dp"
                                android:layout_height="110dp"
                                app:srcCompat="@drawable/straw" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/strawberry"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="193dp"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/Search_card"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">


                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="155dp"
                                android:layout_height="120dp"
                                app:srcCompat="@drawable/mal" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/Maltesers"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/Export_card"
                        android:layout_width="160dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="180dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">


                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="match_parent"
                                android:layout_height="120dp"
                                app:srcCompat="@drawable/van" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/vanilla"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>